# serde-xml-rs

./: Cargo.toml
src/de/: mod.rs
src/ser/: map.rs  mod.rs
tests/: failures.rs
