[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>", "cr8t <cr8t@users.noreply.github.com>"]
description = "Maintained fork of xml-rs based deserializer for Serde (compatible with 0.9+)"
license = "MIT"
name = "serde-xml-rust"
repository = "https://github.com/cr8t/serde-xml-rs"
version = "0.6.0"
edition = "2018"

[dependencies]
log = { version = "0.4", optional = true }
serde = "1.0"
xml-rs = "0.8"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.1"
docmatic = "0.1"
rstest = "0.12"

[features]
default = ["log"]
log = ["dep:log"]
